<resources>
    <string name="app_name">My App</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_bank">Bank</string>
    <string name="title_bazaar">Bazaar</string>
    <string name="title_map">Map</string>
    <string name="title_bus_stand">Bus stand</string>
    <string name="title_school">School</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="my_ads">My Ads</string>
    <string name="favorites">Favorites</string>
    <string name="ads">Ads</string>
    <string name="all_ad_list">All Ads</string>
    <string name="nearest_ads">Nearest Ads</string>
    <string name="logout">Logout</string>
    <string name="smart_ads">Smart Ads</string>
    <string name="smart_ad_title">Smart advertisement!!!</string>
    <string name="default_user_name">Makinul Hasan</string>
    <string name="default_user_email">md.makinul.nasim@gmail.com</string>
    <string name="default_contact_info">md.makinul.nasim@gmail.com</string>
    <string name="post_your_ad">Post Your Ad</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">loading…</string>
    <string name="loading_please_wait">Loading, please wait…</string>
    <string name="rent_type">Rent type</string>
    <string name="family">Family</string>
    <string name="sublet">Sublet</string>
    <string name="mess">Mess</string>
    <string name="others">Others</string>
    <string name="total_space">Total space</string>
    <string name="rent">Rent</string>
    <string name="rent_per_month">Rent per month</string>
    <string name="bed_room">Bed Room</string>
    <string name="drawing_dining">Drawing Dining</string>
    <string name="drawing_dining_facility">Have drawing dining facility?</string>
    <string name="include_utility">Include utility bill?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bathroom">Bathroom</string>
    <string name="balcony">Balcony</string>
    <string name="others_facility">Others Facility</string>
    <string name="water">Water</string>
    <string name="gas">Gas(Supply)</string>
    <string name="lift">Lift</string>
    <string name="generator">Generator</string>
    <string name="emailAddress">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="houseInfo">House number/name</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="google_login_failed">Login failed please try again later.</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="your_email">Your Email</string>
    <string name="phone_no">Phone no</string>
    <string name="submit">Submit</string>
    <string name="contact">Contact</string>
    <string name="contact_info">Contact information</string>
    <string name="pick_all_photo">All Photos</string>
    <string name="pick_photos">Photo</string>
    <string name="pick_pick">Select</string>
    <string name="pick_photo_size">(%1$s)</string>
    <string name="pick_photo_size_limit">Max size %1$s </string>
    <string name="please_select_photo">Please select any photo to publish.</string>
    <string name="there_has_no_new_photo_to_publish">There has no new photo to publish.</string>
    <string name="tk">TK</string>
    <string name="sq_ft">sq ft</string>
    <string name="rent_from">Rent From</string>
    <string name="select_date">Select Date</string>
    <string name="floor">Floor</string>
    <string name="image_description">Image description</string>
    <string name="user_profile_pic">Profile pic</string>
    <string name="exit">Exit</string>
    <string name="mainImage">Ad main image</string>
    <string name="adFavIcon">Ad favourite icon</string>
    <string name="additional_info">Additional information</string>
    <string name="flat_info">Flat information</string>
    <string name="dummy_full_address">Dummy full address</string>
    <string name="full_address">Full address</string>
    <string name="security_guard">Security guard</string>
    <string name="please_select_rent_date">Please select rent date</string>
    <string name="facing">Facing</string>
    <string name="flat_face">Flate face</string>
    <string name="flat">Flat</string>
    <string name="utility_bill">Utility bill</string>
    <string name="error_field_required">This input field required.</string>
    <string name="error_valid_mobile_number">Please insert valid mobile number.</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="title_bar_icon">Title bar icon</string>
    <string name="image_upload_title">Image uploading started</string>
    <string name="image_upload_message">Your selected image(\'s) uploading…\nYou can\'t stop it right now, but you can change it later.</string>
    <string name="image_upload_status" formatted="false">Your uploading image progress %s.</string>
    <string name="image_upload_starting">Your image uploading is going to start.</string>
    <string name="your_selected_location">Your selected location</string>
    <string name="map">Map</string>
    <string name="is_everything_ok">Is Everything OK?</string>
    <string name="summary">Summary</string>
    <string name="please_pick_a_location_into_the_map">Please pick a location into the map.</string>
    <string name="ad_published_successfully">Your Ad published successfully</string>
    <string name="ad_published_again_successfully">Your Ad published again successfully</string>
    <string name="ad_updated_successfully">Your Ad updated successfully</string>
    <string name="ad_deleted_successfully">Your Ad deleted successfully</string>
    <string name="your_ad_published_successfully_would_u_like">Your advertisement published successfully, would you like to add some picture/image, that represent your flat type?</string>
    <string name="your_ad_updated_successfully_would_u_like">Your advertisement updated successfully, would you like to change your previously set picture/image?</string>
    <string name="dummy_photo_count">0 Photo</string>
    <string name="ad_details">Ad Details</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="flat_description">Flat description</string>
    <string name="report_this">Report this</string>
    <string name="icon">Icon</string>
    <string name="map_view">Map View</string>
    <string name="school_college">School College</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="privacy_policy_note" formatted="false">We value your privacy.\nOur %s and %s</string>
    <string name="we_value_your_policy" formatted="false">We value your privacy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="submit_your_ad">Submit your Ad</string>
    <string name="mess_member_type">Mess member type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="mess_member_type_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="maid_servant">Maid servant</string>
    <string name="meal_facility">Meal facility</string>
    <string name="all_time_water">All time water</string>
    <string name="wifi_facility">WiFi facility</string>
    <string name="fridge_facility">Fridge facility</string>
    <string name="non_smoker_only">Non-smoker only?</string>
    <string name="only_students">Only students</string>
    <string name="only_job_holders">Only job holders</string>
    <string name="non_smoker">Non-smoker</string>
    <string name="description">Description</string>
    <string name="description_if_need">Description (if need)</string>
    <string name="twenty_four_water">Water 24 hr</string>
    <string name="sublet_type">Sublet type</string>
    <string name="tiny_family">Tiny family</string>
    <string name="small_family">Small family</string>
    <string name="female_sublet">Only female</string>
    <string-array name="sublet_type_array">
        <item>@string/tiny_family</item>
        <item>@string/small_family</item>
        <item>@string/female_sublet</item>
    </string-array>
    <string name="tiny_family_details">Tiny family(only husband &amp; wife)</string>
    <string name="small_family_details">Small family(only husband &amp; wife with single kid)</string>
    <string name="female_sublet_details">Female student\'s or service holder\'s (maximum 2/3)</string>
    <string-array name="sublet_type_details_array">
        <item>@string/tiny_family_details</item>
        <item>@string/small_family_details</item>
        <item>@string/female_sublet_details</item>
    </string-array>
    <string name="attached">Attached</string>
    <string name="non_attached">Non-attached</string>
    <string name="shared">Shared/Common</string>
    <string-array name="sublet_bath_type_array">
        <item>@string/attached</item>
        <item>@string/non_attached</item>
        <item>@string/shared</item>
    </string-array>
    <string name="bathroom_type">Bathroom/Toilet type</string>
    <string name="mess_member">Mess member</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="parking_garage">Parking garage</string>
    <string name="please_mention_your_desired_type">Please mention your desired type</string>
    <string name="kitchen_share">Kitchen Share</string>
    <string name="well_furnished">Well furnished</string>
    <string name="mess_management_system">Mess management system</string>
    <string name="manage_by_office">Manage by single man/office.</string>
    <string name="manage_by_group">Manage by few group member.</string>
    <string name="circulate_every_month">Circulate every month to corresponding member.</string>
    <string name="approximate_total_space">Approximate total space</string>
    <string name="approximate_meal_rate">Approximate meal rate</string>
    <string name="approximate_meal_rate_value">50</string>
    <string name="kitchen_cabinet">Kitchen cabinet</string>
    <string name="is_it_a_duplex">Is it a duplex house?</string>
    <string name="select_type">Select Type</string>
    <string name="office_space">Office-Space</string>
    <string name="commercial_space">Commercial-Space</string>
    <string name="mini_shop">Mini-Shop</string>
    <string name="market_place">Market-Place</string>
    <string name="godown">Godown</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rent_range">Rent range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="please_select_rent_type">Please select rent type</string>
    <string name="delete_already_rented">Already rented</string>
    <string name="delete_not_interested_now">Not interested now</string>
    <string name="delete_hide_now_only">Hide now only</string>
    <string name="delete_just_delete">Just delete</string>
    <string name="share">Share</string>
    <string name="title_stores">Stores</string>
    <string name="ad_mob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="filter">Filter</string>
    <string name="my_favorites">My favorites</string>
    <string name="sort">Sort</string>
    <string name="sort_by_rent">Sort by rent price</string>
    <string name="sort_by_date">Sort by rent date</string>
    <string name="title_home">Home</string>
</resources>