<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionBank"
        android:icon="@drawable/ic_marker_bank"
        android:title="@string/title_bank" />

    <item
        android:id="@+id/actionSchool"
        android:icon="@drawable/ic_marker_school"
        android:title="@string/title_school" />

    <item
        android:id="@+id/actionMap"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/actionDepartmentStore"
        android:icon="@drawable/ic_marker_dep_store"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/actionBusStand"
        android:icon="@drawable/ic_marker_bus_stand"
        android:title="@string/title_bus_stand" />

</menu>
