<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filterAction"
        android:checkable="true"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="2"
        android:title="@string/filter"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/filterByFamily"
                    android:checked="true"
                    android:orderInCategory="0"
                    android:title="@string/family" />
                <item
                    android:id="@+id/filterByMess"
                    android:orderInCategory="1"
                    android:title="@string/mess" />
                <item
                    android:id="@+id/filterBySublet"
                    android:orderInCategory="2"
                    android:title="@string/sublet" />
                <item
                    android:id="@+id/filterByOthers"
                    android:orderInCategory="3"
                    android:title="@string/others" />
            </group>
        </menu>

    </item>
</menu>