<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sortAction"
        android:checkable="true"
        android:icon="@drawable/ic_menu_sort"
        android:orderInCategory="1"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/sortByRent"
                android:title="@string/sort_by_rent" />
            <item
                android:id="@+id/sortByDate"
                android:title="@string/sort_by_date" />
        </menu>

    </item>
    <item
        android:id="@+id/filterAction"
        android:checkable="true"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="2"
        android:title="@string/filter"
        app:showAsAction="always" />
</menu>