<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/alert_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_rent_type"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rentType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/family"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/mess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mess_member"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/sublet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sublet"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:textColor="@color/black" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rentTypeOthers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/officeSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/office_space"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/commercialSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commercial_space"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/miniShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mini_shop"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/marketPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_place"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/godown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/godown"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/othersOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/rent_range"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tk"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/rentMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:gravity="center"
                android:hint="@string/min"
                android:inputType="numberDecimal"
                android:maxLength="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tk"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/rentMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:gravity="center"
                android:hint="@string/max"
                android:inputType="numberDecimal"
                android:maxLength="6" />
        </LinearLayout>

        <include
            layout="@layout/alert_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:layout_marginTop="@dimen/size_10dp" />
    </LinearLayout>
</LinearLayout>