<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/alert_title_bar" />

    <RadioGroup
        android:id="@+id/deleteReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/alreadyRented"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/delete_already_rented"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/notInterestedNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_not_interested_now"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/hideNowOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_hide_now_only"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/justDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_just_delete"
            android:textColor="@color/black" />
    </RadioGroup>

    <include
        layout="@layout/alert_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|right"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />
</LinearLayout>